<resources>
    <string name="app_name">Academic Scheduler</string>
    <string name="academic_scheduler">Academic Scheduler</string>
    <string name="calender">calender</string>
    <string name="enter_button">ENTER</string>
    <string name="terms">TERMS</string>
    <string name="courses">COURSES</string>
    <string name="assessments">ASSESSMENTS</string>
    <string name="sample_text">Sample Text</string>
    <string name="no_terms">No Terms Entered</string>
    <string name="no_date">MM-DD-YY</string>
    <string name="add_term">Add Term</string>
    <string name="new_term">New Term</string>
    <string name="name">Name:</string>
    <string name="end_date">End date:</string>
    <string name="start_date">Start date:</string>
    <string name="add_course">add course</string>
    <string name="new_course">New Course</string>
    <string name="course_name">Course name</string>
    <string name="status">Status:</string>
    <string name="in_progress">In Progress</string>
    <string name="completed">Completed</string>
    <string name="dropped">Dropped</string>
    <string name="plan_to_take">Plan to Take</string>
    <string name="course_start_date">Course start date</string>
    <string name="course_end_date">Course end date</string>
    <string name="instructor_name">Instructor name:</string>
    <string name="instructor_phone">Instructor phone:</string>
    <string name="instructor_email">Instructor email:</string>
    <string name="tap_to_add_notes">Tap to add notes</string>
    <string name="notes">Notes</string>
    <string name="instructor">INSTRUCTOR</string>
    <string name="add_new_course">Add New Course</string>
    <string name="add_new_term">Add New Term</string>
    <string name="performance">Performance</string>
    <string name="objective">Objective</string>
    <string name="add_new_assessment">Add New Assessment</string>
    <string name="end_date_header">End Date</string>
    <string name="start_date_header">Start Date</string>
    <string name="term_name">Term Name</string>
    <string name="edit_notes">Edit Notes</string>
    <string name="notes_here">Notes here</string>
    <string name="edit_course">Edit Course</string>
    <string name="delete_course">Delete Course</string>
    <string name="delete_term">Delete Term</string>
    <string name="edit_term">Edit Term</string>
    <string name="edit_assessment">Edit Assessment</string>
    <string name="delete_assessment">Delete Assessment</string>
    <string name="share_notes">Share Notes</string>
    <string name="alert_for_start_date">Alert for Start Date</string>
    <string name="alert_for_end_date">Alert for End Date</string>
    <string name="channel_name">CourseStartChannel</string>
    <string name="channel_description">Notification for Course Start Date</string>
</resources>