<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/edit_course"
        android:title="@string/edit_course"
        android:icon="@drawable/edit_asset"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/delete_course"
        android:title="@string/delete_course"
        android:icon="@drawable/delete_asset"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/share_note"
        android:title="@string/share_notes"
        android:icon="@drawable/share_asset"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/course_start_alert"
        android:title="@string/alert_for_start_date"
        android:icon="@drawable/alert_asset"
        app:showAsAction="never"/>

    <item
        android:id="@+id/course_end_alert"
        android:title="@string/alert_for_end_date"
        android:icon="@drawable/alert_asset"
        app:showAsAction="never"/>


</menu>