<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/almond">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_course_textview"
        android:text="@string/new_course"
        android:textSize="24sp"
        android:textStyle="bold"
        android:lineSpacingExtra="10sp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black_rich"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp"
            android:textColor="@color/black_rich"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/course_name_edittext"
            android:hint="@string/course_name"
            android:importantForAutofill="no"
            android:textSize="20sp"
            android:inputType="text"
            android:textColor="@color/black_rich"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textSize="20sp"
        android:textColor="@color/black_rich"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/status_inprogress"
            android:text="@string/in_progress"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/status_completed"
            android:text="@string/completed"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/status_dropped"
            android:text="@string/dropped"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/status_plantotake"
            android:text="@string/plan_to_take"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_date"
            android:textSize="20sp"
            android:textColor="@color/black_rich"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/course_start_edittext"
            android:hint="@string/course_start_date"
            android:importantForAutofill="no"
            android:focusable="false"
            android:textSize="20sp"
            android:inputType="date"
            android:textColor="@color/black_rich"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            android:textSize="20sp"
            android:textColor="@color/black_rich"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/course_end_edittext"
            android:importantForAutofill="no"
            android:focusable="false"
            android:textSize="20sp"
            android:hint="@string/course_end_date"
            android:inputType="date"
            android:textColor="@color/black_rich"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructor_name"
            android:labelFor="@+id/instructor_name_edittext"
            android:textSize="20sp"
            android:textColor="@color/black_rich"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/instructor_name_edittext"
            android:importantForAutofill="no"
            android:textSize="20sp"
            android:inputType="text"
            android:textColor="@color/black_rich"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructor_phone"
            android:labelFor="@+id/instructor_phone_edittext"
            android:textSize="20sp"
            android:textColor="@color/black_rich"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/instructor_phone_edittext"
            android:textSize="20sp"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:textColor="@color/black_rich"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructor_email"
            android:labelFor="@+id/instructor_email_edittext"
            android:textSize="20sp"
            android:textColor="@color/black_rich"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/instructor_email_edittext"
            android:textSize="20sp"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColor="@color/black_rich"/>

    </LinearLayout>

</LinearLayout>