<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/almond"
    tools:context=".CourseDetails">

    <TextView
        android:id="@+id/course_name_detail_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/sample_text"
        android:textColor="@color/black_rich"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/course_status_detail_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sample_text"
        android:textColor="@color/black_rich"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_name_detail_textview" />

    <TextView
        android:id="@+id/course_start_detail_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/sample_text"
        android:textColor="@color/black_rich"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_status_detail_textview" />

    <TextView
        android:id="@+id/course_end_detail_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/sample_text"
        android:textColor="@color/black_rich"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_status_detail_textview" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instructor"
        android:fontFamily="serif"
        android:id="@+id/course_instructor_title"
        android:textColor="@color/black_rich"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@+id/course_name_detail_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/instructor_name_textview"
        android:textColor="@color/black_rich"
        android:textSize="16sp"
        android:text="@string/sample_text"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/course_instructor_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/instructor_phone_textview"
        android:textColor="@color/black_rich"
        android:textSize="16sp"
        android:text="@string/sample_text"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/instructor_name_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/instructor_email_textview"
        android:textColor="@color/black_rich"
        android:textSize="16sp"
        android:text="@string/sample_text"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/instructor_phone_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/assessment_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="serif"
        android:text="@string/assessments"
        android:textColor="@color/black_rich"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/course_detail_recyclerview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_instructor_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/course_detail_recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assessment_title_textview"
        app:layout_constraintBottom_toTopOf="@+id/course_notes_title"/>

    <TextView
        android:id="@+id/course_notes_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/notes"
        android:textColor="@color/black_rich"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="400dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_name_detail_textview" />

    <TextView
        android:id="@+id/course_notes_textview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/almond"
        android:gravity="start"
        android:lines="10"
        android:textColor="@color/black_rich"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@+id/course_notes_title" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_assessment_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/blue_gray"
        android:contentDescription="@string/add_course"
        android:src="@drawable/add_asset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="40dp" />

</androidx.constraintlayout.widget.ConstraintLayout>